padronização das páginas

--- a/projeto/src/pages/contato.html
+++ b/projeto/src/pages/contato.html
@@ -21,7 +21,7 @@
     </header>
 
 <center>
-    <font face = athelas>
+    <font face = helvetica>
     <table>
          <h3>FALE CONOSCO</h3>
          Preencha para entrar em contato conosco
@@ -58,10 +58,10 @@
                     <img src="../imagens/contato.jpeg" width="150px" height="150px">
                 </td>
                 <td>
-                <font face = athelas>
-                    <h1>Giulio Agnello</h1>
-                    <h2 color="red">+55 11 940028922</h2>
-                    <h2>giulio.agn@agnellovinhos.com.br</h2>
+                <font face = helvetica>
+                    <h1>&nbsp&nbsp&nbspGiulio Agnello</h1>
+                    <h2 color="red">&nbsp&nbsp&nbsp+55 11 940028922</h2>
+                    <h2>&nbsp&nbsp&nbspgiulio.agn@agnellovinhos.com.br&nbsp&nbsp&nbsp</h2>
                 </font>
                 </td>
             </tr>
