--- a/projeto/src/pages/produtos.html
+++ b/projeto/src/pages/produtos.html
@@ -24,13 +24,13 @@
             <tr>
                 <td>
                     <center>
-                        <font face="athelas"><b>VINHOS TINTOS</b></font>
+                     <br>  <font face="helvetica"><b>VINHOS TINTOS</b></font>
                     </center>
                     <img src="../imagens/tinto.jpeg" width="400px" height="400px">
                 </td>
                 <td>
                 <center>
-                    <font face="athelas">
+                    <font face="helvetica">
                     <br>Seco
                     <br>
                     <br>Meio Seco
@@ -39,30 +39,35 @@
                     <br>
                     <br>Licoroso
                     <br>
-                    <br>&#127463;&#127479; / 🇦🇷 / 🇪🇸 / 🇫🇷 / 🇮🇹 / 🇵🇹 
+                    <br>&nbsp&nbsp&nbsp&#127463;&#127479; / 🇦🇷 / 🇪🇸&nbsp&nbsp&nbsp
+                    <br>&nbsp&nbsp&nbsp🇫🇷 / 🇮🇹 / 🇵🇹&nbsp&nbsp&nbsp
                     </font>
                 </center>
                 </td>
 
                 <td>
                     <center>
-                        <font face="athelas">
+                        <font face="helvetica">
                         <div style="text-align:center;">
                         <h2>Uma viagem pela história do vinho tinto</h2>
                         <br>A história do vinho tinto remonta a milhares de anos atrás, quando os antigos egípcios,
                         <br>gregos e romanos produziam e apreciavam essa bebida. O vinho tinto é feito a partir de
                         <br>uvas escuras, que são esmagadas e fermentadas com as cascas, resultando em uma 
                         <br>coloração avermelhada.
+                        <br>
                         <br>Ao longo dos séculos, o vinho tinto tornou-se uma parte importante da cultura e da
                         <br>economia de muitas regiões do mundo, incluindo a Europa, a América do Sul e Austrália.  
                         <br>Em alguns casos, as condições climáticas e os solos únicos dessas áreas produzem 
                         <br>variedades de uva que são especialmente adequadas para a produção de vinho tinto de
                         <br>alta qualidade.
+                        <br>
                         <br>Nos tempos modernos, o vinho tinto tem se popularizado cada vez mais, tornando-se uma
                         <br>bebida comum em restaurantes, bares e lares ao redor do mundo. Além disso, a produção
                         <br>e o consumo de vinho tinto têm sido objeto de estudo e interesse por parte de enólogos,
                         <br>sommeliers e outros especialistas em vinhos, que procuram entender melhor as 
                         <br>características e nuances dessa bebida fascinante.
+                        <br>
+                        <br>
                         </font>
                     </center>
                         
@@ -74,13 +79,13 @@
             <tr>
                 <td>
                     <center>
-                    <font face="athelas"><b>VINHOS BRANCOS</b></font>
+                    <font face="helvetica"><b>VINHOS BRANCOS</b></font>
                     </center>
                     <img src="../imagens/brancos.jpeg" width="400px" height="400px">
                 </td>
                 <td>
                     <center>
-                        <font face="athelas">
+                        <font face="helvetica">
                         <br>Seco
                         <br>
                         <br>Meio Seco
@@ -89,33 +94,40 @@
                         <br>
                         <br>Licoroso
                         <br>
-                        <br>&#127463;&#127479; / 🇦🇷 / 🇪🇸 / 🇫🇷 / 🇮🇹 / 🇵🇹 
+                        <br>&nbsp&nbsp&nbsp&#127463;&#127479; / 🇦🇷 / 🇪🇸&nbsp&nbsp&nbsp
+                        <br>&nbsp&nbsp&nbsp🇫🇷 / 🇮🇹 / 🇵🇹&nbsp&nbsp&nbsp
                         </font>
                     </center>
                 </td>
 
                 <td>
                     <center>
-                        <font face="athelas">
+                        <font face="helvetica">
                         <div style="text-align:center;">
                         <h2>Vinho branco: uma história refrescante e saborosa</h2>
-                        <br>Os vinhos brancos são conhecidos por sua coloração amarelada ou esverdeada, sabor frutado
-                        <br>e refrescante, sendo produzidos a partir de uvas claras que podem ser colhidas em diversas 
-                        <br>regiõesdo mundo, como França, Itália, Chile, Estados Unidos, entre outras. A variedade de 
-                        <br>uvas utilizadas na produção de vinhos brancos é enorme, com diferentes sabores, aromas e 
-                        <br>características, que refletem as particularidades do solo e do clima de cada região.
-                        <br>Na nossa vinheria, selecionamos cuidadosamente os melhores vinhos brancos de diversas partes 
-                        <br>do mundo, oferecendo aos nossos clientes uma grande variedade de opções para todos os gostos
-                        <br>e ocasiões. Temos desde vinhos brancos leves e suaves, perfeitos para um dia quente de verão
-                        <br>ou um descontraído, até os mais encorpados e complexos, que podem ser apreciados com pratos
-                        <br>mais elaborados e sofisticados. Nossos especialistas em vinhos estão sempre disponíveis para
-                        <br>auxiliar nossos clientes na escolha do vinho branco ideal para cada momento, levando em conta
-                        <br>suas preferências pessoais e as características de cada vinho. Além disso, oferecemos 
-                        <br>degustações de vinhos brancos, proporcionando aos nossos clientes uma experiência sensorial 
-                        <br>única, onde podem experimentar diferentes sabores e aromas e aprender mais sobre as particula-
-                        <br>ridades de cada vinho. Se você é um apreciador de vinhos brancos ou está começando a descobrir
-                        <br>o mundo dos vinhos, venha visitar nossa vinheria e desfrutar de uma experiência única de sabores
-                        <br>e aromas, acompanhada de um atendimento especializado e personalizado.
+                        <br>Os vinhos brancos são conhecidos por sua coloração amarelada ou esverdeada, sabor 
+                        <br>frutado e refrescante, sendo produzidos a partir de uvas claras que podem ser colhidas 
+                        <br>em diversas regiõesdo mundo, como França, Itália, Chile, Estados Unidos, entre outras. 
+                        <br>A variedade de uvas utilizadas na produção de vinhos brancos é enorme, com diferentes 
+                        <br>sabores, aromas e características, que refletem as particularidades do solo e do clima 
+                        <br>de cada região.
+                        <br>
+                        <br>Na nossa vinheria, selecionamos cuidadosamente os melhores vinhos brancos de diversas 
+                        <br>partes do mundo, oferecendo aos nossos clientes uma grande variedade de opções para
+                        <br>todos os gostos e ocasiões. Temos desde vinhos brancos leves e suaves, perfeitos para um 
+                        <br>dia quente de verão ou um descontraído, até os mais encorpados e complexos, que podem ser 
+                        <br>apreciados com pratos mais elaborados e sofisticados. Nossos especialistas em vinhos estão
+                        <br>sempre disponíveis para auxiliar nossos clientes na escolha do vinho branco ideal para
+                        <br>cada momento, levando em conta suas preferências pessoais e as características de cada 
+                        <br>vinho.
+                        <br>
+                        <br>Além disso, oferecemos degustações de vinhos brancos, proporcionando aos nossos 
+                        <br>clientes uma experiência sensorial única, onde podem experimentar diferentes sabores e
+                        <br>aromas e aprender mais sobre as particularidades de cada vinho. Se você é um apreciador
+                        <br>de vinhos brancos ou está começando a descobrir o mundo dos vinhos, venha visitar nossa
+                        <br>vinheria e desfrutar de uma experiência única de sabores e aromas, acompanhada de um
+                        <br>atendimento especializado e personalizado.
+                        <br>&nbsp&nbsp&nbsp
                         </font>
                     </center>
                         
@@ -127,13 +139,13 @@
             <tr>
                 <td>
                     <center>
-                    <font face="athelas"><b>ESPUMANTES</b></font>
+                <br>   <font face="helvetica"><b>ESPUMANTES</b></font>
                     </center>
                     <img src="../imagens/espumantes.jpg" width="400px" height="400px">
                 </td>
                 <td>
                     <center>
-                        <font face="athelas">
+                        <font face="helvetica">
                         <br>Nature
                         <br>
                         <br>Extra Brut
@@ -146,31 +158,38 @@
                         <br>
                         <br>Doce
                         <br>
-                        <br>&#127463;&#127479; / 🇦🇷 / 🇪🇸 / 🇫🇷 / 🇮🇹 / 🇵🇹  
+                        <br>&nbsp&nbsp&nbsp&#127463;&#127479; / 🇦🇷 / 🇪🇸&nbsp&nbsp&nbsp
+                        <br>&nbsp&nbsp&nbsp🇫🇷 / 🇮🇹 / 🇵🇹&nbsp&nbsp&nbsp
                         </font>
                     </center>  
                 </td>
 
                 <td>
                     <center>
-                        <font face="athelas">
+                        <font face="helvetica">
                         <div style="text-align:center;">
                         <h2>Descubra o maravilhoso mundo dos espumantes</h2>
-                        <br>Os espumantes são vinhos que passam por um processo de fermentação secundária na garrafa,
-                        <br>que produz as borbulhas tão características dessa bebida.
-                        <br>Na nossa vinheria, temos uma seleção cuidadosa de espumantes de diferentes regiões do mundo,
-                        <br> como França, Itália, Brasil, Espanha e Argentina, entre outras.
-                        <br>Nossos espumantes variam de leves e delicados, até os mais encorpados e intensos, adequados
-                        <br>para acompanhar desde uma simples refeição até ocasiões mais especiais e sofisticadas.
-                        <br>Com sabores e aromas únicos, nossos espumantes são perfeitos para celebrações e 
-                        <br>comemorações, ou simplesmente para apreciar um momento especial.
-                        <br>Nossa equipe de sommeliers está sempre pronta para ajudar nossos clientes a escolherem o
-                        <br>espumante perfeito para cada ocasião, levando em consideração suas preferências pessoais
-                        <br>e o perfil de cada espumante.
-                        <br>Além disso, oferecemos degustações de espumantes, para que nossos clientes possam 
-                        <br>experimentar diferentes rótulos e descobrir novos sabores e aromas.
-                        <br>Venha nos visitar e descubra o maravilhoso mundo dos espumantes, em uma experiência única 
-                        <br>de sabores e aromas que vai encantar seus sentidos.
+                        <br>Os espumantes são vinhos que passam por um processo de fermentação secundária na 
+                        <br>garrafa, que produz as borbulhas tão características dessa bebida.
+                        <br>
+                        <br>Na nossa vinheria, temos uma seleção cuidadosa de espumantes de diferentes regiões  
+                        <br>do mundo, como França, Itália, Brasil, Espanha e Argentina, entre outras.
+                        <br>
+                        <br>Nossos espumantes variam de leves e delicados, até os mais encorpados e intensos, 
+                        <br>adequados para acompanhar desde uma simples refeição até ocasiões mais especiais e 
+                        <br>sofisticadas. Com sabores e aromas únicos, nossos espumantes são perfeitos para 
+                        <br>celebrações e comemorações, ou simplesmente para apreciar um momento especial.
+                        <br>
+                        <br>Nossa equipe de sommeliers está sempre pronta para ajudar nossos clientes a escolherem 
+                        <br>o espumante perfeito para cada ocasião, levando em consideração suas preferências 
+                        <br>pessoais e o perfil de cada espumante. Além disso, oferecemos degustações de espuman- 
+                        <br>tes, para que nossos clientes possam experimentar diferentes rótulos e descobrir novos 
+                        <br>sabores e aromas.
+                        <br>
+                        <br>Venha nos visitar e descubra o maravilhoso mundo dos espumantes, em uma experiência 
+                        <br>única de sabores e aromas que vai encantar seus sentidos.
+                        <br>
+                        <br>
                         </div>
                         </font>
                     </center>  
