--- a/projeto/src/pages/lojaVirtual.html
+++ b/projeto/src/pages/lojaVirtual.html
@@ -19,6 +19,8 @@
             <img src="../imagens/logo.jpg" width="180px" height="180px">
         </center> 
     </header>
+    <br>
+    <br>
     <center>
         <table border="0" width="100%">
             <tr>
@@ -56,7 +58,7 @@
                                             <font size="3" color="#00000" face="helvetica">Safra de 2010</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Região Rhône</font>
+                                            <font size="3" color="#00000" face="helvetica">Rhône</font>
                                         </li>
                                     </ul>
                                 </td>
@@ -76,7 +78,7 @@
                     </center>
                 </td>
                 <td>
-                    <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Tinto Le Ballon &nbsp&nbsp&nbspRouge</font>
+                    <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Tinto Le &nbsp&nbsp&nbspBallon Rouge</font>
                     <br>
                     <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
                     <br>
@@ -97,13 +99,13 @@
                                         <font size="3" color="#00000" face="helvetica">Suave</font>
                                     </li>
                                     <li>
-                                        <font size="3" color="#00000" face="helvetica">Aroma de frutas vermelhas</font>
+                                        <font size="3" color="#00000" face="helvetica">Aroma de frutas</font>
                                     </li>
                                     <li>
                                         <font size="3" color="#00000" face="helvetica">Safra de 2020</font>
                                     </li>
                                     <li>
-                                        <font size="3" color="#00000" face="helvetica">Região Languedoc</font>
+                                        <font size="3" color="#00000" face="helvetica">Languedoc</font>
                                     </li>
                                 </ul>
                             </td>
@@ -126,7 +128,7 @@
                     </center>
                 </td>
                 <td>
-                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Branco Le Ballon &nbsp&nbsp&nbspBlanc</font>
+                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Branco Le &nbsp&nbsp&nbspBallon Blanc</font>
                         <br>
                         <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
                         <br>
@@ -147,13 +149,13 @@
                                             <font size="3" color="#00000" face="helvetica">Suave</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Aroma de frutos brancos</font>
+                                            <font size="3" color="#00000" face="helvetica">Aroma de frutas</font>
                                         </li>
                                         <li>
                                             <font size="3" color="#00000" face="helvetica">Safra de 2021</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Região Languedoc</font>
+                                            <font size="3" color="#00000" face="helvetica">Languedoc</font>
                                         </li>
                                     </ul>
                                 </td>
@@ -200,7 +202,7 @@
                                         <font size="3" color="#00000" face="helvetica">Safra de 2020</font>
                                     </li>
                                     <li>
-                                        <font size="3" color="#00000" face="helvetica">Região Campos de Cima</font>
+                                        <font size="3" color="#00000" face="helvetica">Campos de Cima</font>
                                     </li>
                                 </ul>
                             </td>
@@ -222,7 +224,7 @@
                     </center>
                 </td>
                 <td>
-                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Espumante "Nuit &nbsp&nbsp&nbspBoréale"</font>
+                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Espumante &nbsp&nbsp&nbsp"Nuit Boréale"</font>
                         <br>
                         <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
                         <br>
@@ -249,7 +251,7 @@
                                             <font size="3" color="#00000" face="helvetica">Safra de 2021</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Região Vale do Loire</font>
+                                            <font size="3" color="#00000" face="helvetica">Vale do Loire</font>
                                         </li>
                                     </ul>
                                 </td>
@@ -269,7 +271,7 @@
                     </center>
                 </td>
                 <td>
-                    <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Tinto Pinot Noir</font>
+                    <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Tinto Pinot &nbsp&nbsp&nbspNoir</font>
                     <br>
                     <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
                     <br>
@@ -296,7 +298,7 @@
                                         <font size="3" color="#00000" face="helvetica">Safra 2020</font>
                                     </li>
                                     <li>
-                                        <font size="3" color="#00000" face="helvetica">Região Serra Gaúcha</font>
+                                        <font size="3" color="#00000" face="helvetica">Serra Gaúcha</font>
                                     </li>
                                 </ul>
                             </td>
