--- a/projeto/src/pages/produtos.html
+++ b/projeto/src/pages/produtos.html
@@ -22,9 +22,9 @@
     <center>
         <table border="1">
             <tr>
-                <td>
+                <td height="550px">
                     <center>
-                     <br>  <font face="helvetica"><b>VINHOS TINTOS</b></font>
+                        <font face="helvetica"><b>VINHOS TINTOS</b></font>
                     </center>
                     <img src="../imagens/tinto.jpeg" width="400px" height="400px">
                 </td>
@@ -77,9 +77,9 @@
                 </td>
             </tr>
             <tr>
-                <td>
+                <td height="550px">
                     <center>
-                    <font face="helvetica"><b>VINHOS BRANCOS</b></font>
+                        <font face="helvetica"><b>VINHOS BRANCOS</b></font>
                     </center>
                     <img src="../imagens/brancos.jpeg" width="400px" height="400px">
                 </td>
@@ -136,9 +136,9 @@
                 </td>
             </tr>
             <tr>
-                <td>
+                <td height="550px">
                     <center>
-                <br>   <font face="helvetica"><b>ESPUMANTES</b></font>
+                        <font face="helvetica"><b>ESPUMANTES</b></font>
                     </center>
                     <img src="../imagens/espumantes.jpg" width="400px" height="400px">
                 </td>
