--- a/projeto/src/pages/paginaPrincipal.html
+++ b/projeto/src/pages/paginaPrincipal.html
@@ -5,47 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <center>
+        <div class="fotoLogo">
             <img src="../imagens/logo.jpg" width="200px" height="200px">
-        </center> 
-        
+        </div>
     </header>
-    
-    <table align="left">
-        <tr>
-            <td><a href="quemSomos.html"><br><font size="4" color="#000" face="helvetica">QUEM SOMOS</font></br></a></td>
+   
+        <div class="menu">
+            <tr>
+                <td><a href="quemSomos.html">SOMOS</a></td>
+            </tr>
+            <tr>
+            <td><a href="produtos.html">PRODUTOS</a></td>
         </tr>
-        <tr>
-           <td><a href="produtos.html"><br><font size="4" color="#000" face="helvetica">PRODUTOS</font></br></a></td></tr>
-        </tr>
-        <tr>
-            <td><a href="lojaVirtual.html"><br><font size="4" color="#000" face="helvetica">LOJA VIRTUAL</font></br></a></td>
-        </tr>
-        <tr>
-            <td><a href="endereco.html" target="_blank"><br><font size="4" color="#000" face="helvetica">ENDEREÇO</font></br></a></td>
-        </tr>
-        <tr>
-            <td><a href="contato.html"></br><font size="4" color="#000" face="helvetica">CONTATO</font></br></a></td>
-        </tr>
-    </table>
-
-    <center>
-        <img src="../imagens/encontroVinhos.jpg" width="650px" height="400px">
-    </center>
+            </tr>
+            <tr>
+                <td><a href="lojaVirtual.html">LOJA VIRTUAL</a></td>
+            </tr>
+            <tr>
+                <td><a href="endereco.html" target="_blank"><br><font size="4" color="#000" face="helvetica">ENDEREÇO</font></br></a></td>
+            </tr>
+            <tr>
+                <td><a href="contato.html"></br><font size="4" color="#000" face="helvetica">CONTATO</font></br></a></td>
+            </tr>
+        </div>
 
     <footer>
-        <center>
-            <br>
-            <br>
-            <br>
             <p>
-                <hr>
-               <h5> <p><font color="grey" face="athelas">Vinheria Agnello</font></p> </h5>
+               <p>Vinheria Agnello</p>
             </p>
-        </center>
     </footer>
 </body>
 </html>
