--- a/projeto/src/pages/paginaPrincipal.html
+++ b/projeto/src/pages/paginaPrincipal.html
@@ -5,47 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
+    <link rel="stylesheet"  type="text/css" href="../css/style.css"> 
 </head>
-<body>
+<br>
     <header>
-        <center>
-            <img src="../imagens/logo.jpg" width="200px" height="200px">
-        </center> 
-        
+        <div class="containerImgLogo">
+            <div class="imgLogo">
+                <img src="../imagens/logo.jpg">
+            </div>
+        </div> 
     </header>
     
-    <table align="left">
-        <tr>
-            <td><a href="quemSomos.html"><br><font size="4" color="#000" face="helvetica">QUEM SOMOS</font></br></a></td>
-        </tr>
-        <tr>
-           <td><a href="produtos.html"><br><font size="4" color="#000" face="helvetica">PRODUTOS</font></br></a></td></tr>
-        </tr>
-        <tr>
-            <td><a href="lojaVirtual.html"><br><font size="4" color="#000" face="helvetica">LOJA VIRTUAL</font></br></a></td>
-        </tr>
-        <tr>
-            <td><a href="endereco.html" target="_blank"><br><font size="4" color="#000" face="helvetica">ENDEREÇO</font></br></a></td>
-        </tr>
-        <tr>
-            <td><a href="contato.html"></br><font size="4" color="#000" face="helvetica">CONTATO</font></br></a></td>
-        </tr>
-    </table>
+<br>
+    <div class="container">
+        <div class="listItem">
+            QUEM SOMOS
+        </div>
 
-    <center>
-        <img src="../imagens/encontroVinhos.jpg" width="650px" height="400px">
-    </center>
+        <div class="listItem">
+            PRODUTOS
+        </div>
+        <div class="listItem">
+            LOJA VIRTUAL
+        </div>
 
+        <div class="listItem">
+            ENDEREÇO
+        </div>
+
+        <div class="listItem">
+            CONTATO
+        </div>
+    </div>
+    <div class="imgContainer">
+        <img src="../imagens/encontroVinhos.jpg">
+    </div>
     <footer>
-        <center>
-            <br>
-            <br>
-            <br>
-            <p>
-                <hr>
-               <h5> <p><font color="grey" face="athelas">Vinheria Agnello</font></p> </h5>
-            </p>
-        </center>
+        <div class="footerContainer">
+            <div class="footerContent">
+                Vinheria Agnello
+            </div>
+        </div>
     </footer>
 </body>
 </html>
