--- a/projeto/src/pages/paginaPrincipal.html
+++ b/projeto/src/pages/paginaPrincipal.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="listItem">
-            PRODUTOS
+            <a href="./produtos.html">PRODUTOS</a>
         </div>
         <div class="listItem">
             LOJA VIRTUAL
